<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#A0A5AA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/phoneNumberVisor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:hint="@string/texview_hint"
                android:textColorHint="#6C6A6A"
                android:gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/clearNumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:backgroundTint="#A50C0C"
                android:src="@android:drawable/ic_input_delete"
                android:scaleType="fitCenter"
                android:contentDescription="@string/clearbutton_description"
                app:tint="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/speedDial1Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/speed_dial_button"
                android:textStyle="bold"
                android:backgroundTint="#3F51B5"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/speedDial2Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/speed_dial_button"
                android:textStyle="bold"
                android:backgroundTint="#3F51B5"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/speedDial3Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/speed_dial_button"
                android:textStyle="bold"
                android:backgroundTint="#3F51B5"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/number1Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_1"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number2Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_2"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number3Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_3"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/number4Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_4"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number5Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_5"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number6Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_6"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/number7Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_7"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number8Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_8"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number9Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_9"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/plusButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_plus"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/number0Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_0"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
            <Button
                android:id="@+id/hashtagButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/dial_button_hashtag"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/callNumberButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@android:drawable/stat_sys_phone_call"
            android:scaleType="fitCenter"
            android:contentDescription="@string/callbutton_description"
            android:backgroundTint="#059F2C"
            app:tint="@color/white"/>

    </LinearLayout>
</layout>