<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#A0A5AA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/userimage_description"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="10dp"
                android:hint="@string/username_hint"
                android:textColorHint="#6C6A6A"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:src="@android:drawable/stat_sys_phone_call"
                android:contentDescription="@string/numberimage_description"/>

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_margin="10dp"
                android:inputType="number"
                android:hint="@string/userphonenumber_hint"
                android:textColorHint="#6C6A6A"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/saveChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/savebutton_text"
            android:textStyle="bold"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
</layout>